# git-pypi

./: .gitignore  LICENSE-MIT  NOTICE  README.md  README.pypi.md  make_wheels.py  pyproject.toml
.github/workflows/: build-binaries.yml  build-wheels.yml  ci.yml  publish-pypi.yml  publish-test-pypi.yml  release.yml  test.yml
test/: conftest.py  test_git_commands.py  test_installation.py
