# pyproject.toml for git-bin wheel building tool
#
# Note: This is NOT for the git-bin package itself (wheels are built dynamically
# by make_wheels.py), but for the build tooling project.

[project]
name = "git-pypi-build"
version = "0.1.0"
description = "Build system for Git Python wheels"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Zanie Blue", email = "contact@zanie.dev" }
]

dependencies = [
    "wheel>=0.41.0",
]

[dependency-groups]
dev = [
    "twine>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.9",
    "ty>=0.0.1a7",
    "delocate>=0.12; sys_platform == 'darwin'",
]

[project.scripts]
make-git-wheels = "make_wheels:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = [
    "git-*",  # Git source trees (downloaded for local builds)
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.environment]
python-version = "3.9"

[tool.ty.src]
exclude = [
    "git-*",
]

[tool.pytest.ini_options]
testpaths = ["test"]
markers = [
    "network: tests requiring network access",
]
